Mon Jul 15 13:36:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_each_pair): performance improvement by using
	  rb_block_arity().

Mon Jul 15 13:15:37 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* proc.c (rb_block_arity): create internal API rb_block_arity().
	  it returns arity of given block.

Mon Jul 15 13:07:27 2013  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* lib/prime.rb (Prime::EratosthenesGenerator,
	  Prime::EratosthenesSieve): New implementation by
	  robertjlooby <robertjlooby AT gmail.com>.

	* test/test_prime.rb: updated with new method name

Mon Jul 15 11:32:46 2013  Zachary Scott  <e@zzak.io>

	* numeric.c (rb_cNumeric): [DOC] Added comment for Numeric to fix doc

Mon Jul 15 11:24:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit_dbl): Useless #if removed.

Mon Jul 15 11:10:46 2013  Zachary Scott  <e@zzak.io>

	* bignum.c (rb_big_coerce): [DOC] Add docs for Bignum#coerce
	  Based on patch by Juanito Fatas [Fixes GH-360]
	  https://github.com/ruby/ruby/pull/360

Mon Jul 15 10:56:01 2013  Zachary Scott  <e@zzak.io>

	* thread.c (mutex_sleep): [DOC] Awake thread will reacquire lock
	  By Tim Abdulla [Fixes GH-342] https://github.com/ruby/ruby/pull/342

Mon Jul 15 10:45:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz16): Use __builtin_clz if possible.
	  (nlz32): Use __builtin_clz or __builtin_clzl if possible.
	  (nlz64): Use __builtin_clzl or __builtin_clzll if possible.
	  (nlz128): Use __builtin_clzll if possible.

	* configure.in: Check __builtin_clz, __builtin_clzl and
	  __builtin_clzll.

Mon Jul 15 09:39:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Use bitsize instead of ceil_log2.
	  (ones): Removed.
	  (next_pow2): Removed.
	  (floor_log2): Removed.
	  (ceil_log2): Removed.

	* configure.in (__builtin_popcountl): Don't check.

Mon Jul 15 02:47:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* localeinit.c (rb_locale_charmap, Init_enc_set_filesystem_encoding):